--- a/bit2/index.html
+++ b/bit2/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Fu<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -25,6 +25,12 @@
             color: #ff69b4;
             animation: popIn 1s ease-out;
         }
+
+
+
+
+
+        
 
         p {
             font-size: 1.2rem;
